# PartSeg_cellpose

./: .gitignore  setup.cfg
src/PartSeg_cellpose/: __init__.py  cellpose_plugin.py
