[metadata]
name = PartSeg_cellpose
description = PartSeg plugin to use cellpose,
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
author = Grzegorz Bokota
author_email = g.bokota@cent.uw.edu.pl
url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
license = BSD-3-Clause
keywords = bioimaging, cellpose
platforms = Linux, Windows, MacOs
project_urls =
    Source Code = https://github.com/4DNucleome/PartSeg_cellpose

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:
install_requires =
    PartSeg>=0.10.8

[options.packages.find]
where=src
[options.entry_points]
PartSeg.plugins=
    cellpose = PartSeg_cellpose

[flake8]
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to reenable, but takes work
max-line-length = 120
ignore = E203,W503,E501,C901
max-complexity = 18
exclude = package/PartSeg/changelog.py, build/**, .eggs/**
